Finished Core, tests remaining

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,6 @@
 	</parent>
 	<groupId>pl.homework</groupId>
 	<artifactId>doctors-appointment</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
 	<name>doctors-appointment</name>
 	<description>Application for doctors appointment</description>
 
@@ -41,6 +40,18 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.junit.vintage</groupId>
+			<artifactId>junit-vintage-engine</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>rest-assured</artifactId>
+			<version>3.3.0</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
